--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -8,5 +8,19 @@
 	<header>
 		<h3>Welcome to First Web!!!</h3>
 	</header>
+	<main>
+		<section>
+			<article>
+				<h4>학생 정보 가져오기</h4>
+				<form action="/StudentServlet" method="GET">
+					<select name="clsType">
+						<option value="kor">한글</option>
+						<option value="eng">영어</option>
+					</select>
+					<button type="submit">조회하기!!</button>
+				</form>
+			</article>
+		</section>
+	</main>
 </body>
 </html>
