--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -12,7 +12,7 @@
 		<section>
 			<article>
 				<h4>학생 정보 가져오기</h4>
-				<form action="/StudentServlet" method="GET">
+				<form action="StudentServlet" method="GET">
 					<select name="clsType">
 						<option value="kor">한글</option>
 						<option value="eng">영어</option>
