--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -20,6 +20,15 @@
 					<button type="submit">조회하기!!</button>
 				</form>
 			</article>
+			<article>
+				<h4>LegacyServlet 호출</h4>
+				<form action="LegacyServlet" method="GET">
+					<!--  서버로 보낼 때 속성은 name 속성 값으로 구별 -->
+					<input type="number" name="firstOperand" required>
+					<input type="number" name="secondOperand" required>
+					<button type="submit">더하기!!</button>
+				</form>
+			</article>
 		</section>
 	</main>
 </body>
