--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -57,6 +57,17 @@
 					<button type="submit">forward!!</button>
 				</form>
 			</article>
+			<article>
+				<h4>step1</h4>
+				<form action="views/step1.jsp" method="GET">
+					<!--  서버로 보낼 때 속성은 name 속성 값으로 구별 -->
+					<select name="gender">
+						<option value="male">남자</option>
+						<option value="female">여자</option>
+					</select>
+					<button type="submit"> go step2!!</button>
+				</form>
+			</article>
 		</section>
 	</main>
 </body>
