--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -27,9 +27,8 @@
 					<select name="showType">
 						<option value="stream">stream</option>
 						<option value="jsp">jsp</option>
-					</select>
-					<input type="number" name="firstOperand" required>
-					<input type="number" name="secondOperand" required>
+					</select> <input type="number" name="firstOperand" required> <input
+						type="number" name="secondOperand" required>
 					<button type="submit">더하기!!</button>
 				</form>
 			</article>
@@ -40,9 +39,8 @@
 					<select name="showType">
 						<option value="stream">stream</option>
 						<option value="jsp">jsp</option>
-					</select>
-					<input type="number" name="firstOperand" required>
-					<input type="number" name="secondOperand" required>
+					</select> <input type="number" name="firstOperand" required> <input
+						type="number" name="secondOperand" required>
 					<button type="submit">jsp로 데이터 보내기!!</button>
 				</form>
 			</article>
@@ -65,7 +63,19 @@
 						<option value="male">남자</option>
 						<option value="female">여자</option>
 					</select>
-					<button type="submit"> go step2!!</button>
+					<button type="submit">go step2!!</button>
+				</form>
+			</article>
+			<article>
+				<h4>views/errorThrow1.jsp</h4>
+				<form action="views/errorThrow1.jsp" method="GET">
+					<button type="submit">forward!!</button>
+				</form>
+			</article>
+			<article>
+				<h4>views/errorThrow2.jsp</h4>
+				<form action="views/errorThrow2.jsp" method="GET">
+					<button type="submit">forward!!</button>
 				</form>
 			</article>
 		</section>
