--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -78,6 +78,12 @@
 					<button type="submit">forward!!</button>
 				</form>
 			</article>
+			<article>
+				<h4>file upload</h4>
+					<form method="post" action="upload" enctype="multipart/form-data">
+        			Choose a file: <input type="file" name="multiPartServlet" multiple/><input type="submit" value="Upload"/>
+				</form>
+			</article>
 		</section>
 	</main>
 </body>
