--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -81,7 +81,14 @@
 			<article>
 				<h4>file upload</h4>
 					<form method="post" action="upload" enctype="multipart/form-data">
-        			Choose a file: <input type="file" name="multiPartServlet" multiple/><input type="submit" value="Upload"/>
+        			Choose a file: <input type="file" name="multiPartServlet" multiple/>
+        				<input type="submit" value="Upload"/>
+					</form>
+			</article>
+			<article>
+				<h4>init parameter</h4>
+				<form action="InitParamServlet" method="post">
+					<button type="submit">go!!!!</button>
 				</form>
 			</article>
 		</section>
