--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -116,6 +116,10 @@
 			<article>
 				<h4>views/action.jsp</h4>
 				<form action="views/action.jsp" method="GET">
+					<select name="tableType">
+						<option value="singer">가수</option>
+						<option value="actor">배우</option>
+					</select>				
 					<button type="submit">jsp include action tag</button>
 				</form>
 			</article>
