--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -119,8 +119,14 @@
 					<select name="tableType">
 						<option value="singer">가수</option>
 						<option value="actor">배우</option>
-					</select>				
+					</select>
 					<button type="submit">jsp include action tag</button>
+				</form>
+			</article>
+			<article>
+				<h4>UseBeanServlet 호출</h4>
+				<form action="UseBeanServlet" method="GET">
+					<button type="submit">UseBeanServlet!!</button>
 				</form>
 			</article>
 		</section>
