--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -125,7 +125,10 @@
 			</article>
 			<article>
 				<h4>UseBeanServlet 호출</h4>
-				<form action="UseBeanServlet" method="GET">
+				<form action="UseBeanServlet" method="POST">
+					<input type="text" name="name" value="파라미터" >
+					<input type="text" name="addr" value="순천시 장천동 상공회의소" >
+					<input type="text" name="birth" value="2022" >
 					<button type="submit">UseBeanServlet!!</button>
 				</form>
 			</article>
