--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -132,6 +132,12 @@
 					<button type="submit">UseBeanServlet!!</button>
 				</form>
 			</article>
+			<article>
+				<h4>views/jstl.jsp 호출</h4>
+				<form action="views/jstl.jsp" method="POST">
+					<button type="submit">jstl.jsp gogo!!</button>
+				</form>
+			</article>
 		</section>
 	</main>
 </body>
