--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -138,6 +138,7 @@
 					<select name="searchType">
 						<option value="employees">직원정보</option>
 						<option value="departments">부서정보</option>
+						<option value="all">모두</option>
 					</select>
 					<button type="submit">jstl.jsp gogo!!</button>
 				</form>
