--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -144,6 +144,12 @@
 					<button type="submit">jstl.jsp gogo!!</button>
 				</form>
 			</article>
+			<article>
+				<h4>GsonServlet 호출</h4>
+				<form action="GsonServlet" method="POST">
+					<button type="submit">GsonServlet!!</button>
+				</form>
+			</article>			
 		</section>
 	</main>
 </body>
