--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -150,6 +150,12 @@
 					<button type="submit">GsonServlet!!</button>
 				</form>
 			</article>			
+			<article>
+				<h4> redirect </h4>
+				<form action="views/origin.jsp" method="POST">
+					<button type="submit">redirect!!</button>
+				</form>
+			</article>
 		</section>
 	</main>
 </body>
