--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -156,6 +156,13 @@
 					<button type="submit">redirect!!</button>
 				</form>
 			</article>
+			<article>
+				<h4>views/fmt.jsp</h4>
+				<form action="views/fmt.jsp" method="GET">
+					<input id="hobby" type="text" name="hobby" value="" >
+					<button id="fmtBtn" type="submit">jstl fmt!!</button>
+				</form>
+			</article>			
 		</section>
 	</main>
 </body>
@@ -171,6 +178,10 @@
 			html += `<option>${file.name}</option>`;
 		}
 		uploadFileList.innerHTML = html;
+	});
+	var hobbyObj = document.querySelector("#hobby");
+	document.querySelector("#fmtBtn").addEventListener("click", (e)=>{
+		if ( hobbyObj.value == '' ) e.preventDefault(); // 기본 액션을 실행하지 않는다. action으로 요청을 보내지 않는다
 	});
 })();
 </script>
